public/style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	background-color: black;
	height: 100vh;
	max-height: -webkit-fill-available;
	color: white;
	font-family: "SF Pro Display", sans-serif;
}

section {
	height: 100vh;
	max-height: -webkit-fill-available;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-evenly;
}

h1 {
	font-size: 2rem;
	margin-bottom: 1rem;
}

h2 {
	font-size: 1.2rem;
	font-style: italic;
	font-weight: 500;
}

header {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

img {
	width: 200px;
}

button {
	font-family: "SF Pro Display", sans-serif;
	font-size: 1.2rem;
	color: white;
	border-radius: 5px;
	padding: 0.5rem;
	border: none;
	background-color: #f48a4f;
}
/* CSS */
.button-50 {
	appearance: button;
	background-color: #fff;
	background-image: none;
	border: 1px solid #fff;
	border-radius: 4px;
	box-shadow: #000 4px 4px 0 0, #fff 4px 4px 0 1px;
	box-sizing: border-box;
	color: #000;
	cursor: pointer;
	display: inline-block;
	font-size: 14px;
	font-family: "SF Pro Display", sans-serif;

	font-weight: 500;
	line-height: 20px;
	margin: 0 5px 10px 0;
	overflow: visible;
	padding: 12px 40px;
	text-align: center;
	text-transform: none;
	touch-action: manipulation;
	user-select: none;
	-webkit-user-select: none;
	vertical-align: middle;
	white-space: nowrap;
	display: flex;
	align-items: center;
}

.button-50:focus {
	text-decoration: none;
}

.button-50:hover {
	text-decoration: none;
}

.button-50:active {
	box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
	outline: 0;
}

.button-50:not([disabled]):active {
	box-shadow: #000 2px 2px 0 0, #fff 2px 2px 0 1px;
	transform: translate(2px, 2px);
}

.counter {
	width: 150px;
	/* margin: auto; */
	display: flex;
	align-items: center;
	justify-content: center;
}
.counter input {
	width: 50px;
	border: 0;
	line-height: 30px;
	font-size: 20px;
	text-align: center;
	background: #000;
	color: #fff;
	appearance: none;
	outline: 0;
}
.counter span {
	display: block;
	font-size: 25px;
	/* padding: 1px 9px; */
	cursor: pointer;
	color: #fff;
	user-select: none;
	border: 1px solid white;
	border-radius: 200px;
	height: 40px;
	width: 40px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.hidden {
	display: none;
}

@media (min-width: 768px) {
	.button-50 {
		padding: 12px 50px;
	}
}

.card {
	margin-right: 0.5rem;
}

